Fix image stretching bug

--- a/source/sass/modules/_casestudy.scss
+++ b/source/sass/modules/_casestudy.scss
@@ -59,6 +59,7 @@
     width: 100%;
     height: auto;
     display: block;
+    align-self: center;
   }
 
 }
